# lvgl-v8.2.0-esp32s3

./: .gitmodules  README.md  sdkconfig.defaults  sdkconfig.esp32s3.01
main/: CMakeLists.txt  gui_task.c  main.c
main/lv_port/: lv_port_disp.c
main/lv_port/backup/: lv_port_disp_c  lv_port_fs_sdfat_cpp  lv_port_fs_sdspi_2_c  lv_port_fs_sdspi_c  lv_port_fs_sdspi_h  lv_port_indev_cpp
